--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,4 +13,8 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+  jwt:
+    secret: ${JWT_SECRET}
+    access-token-expiration: 3600
+    refresh-token-expiration: 86400
 
