--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,6 +15,6 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
   jwt:
     secret: ${JWT_SECRET}
-    access-token-expiration: 3600
+    access-token-expiration: 36000000
     refresh-token-expiration: 86400
 
