--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint app/ next.config.ts postcss.config.mjs"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.10",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
