added fe middleware

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.10",
+    "jose": "^6.1.2",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
