--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "globals": "^16.5.0",
+    "lefthook": "^2.0.4",
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "typescript": "^5",
