--- a/.github/workflows/deploy-workflow.yml
+++ b/.github/workflows/deploy-workflow.yml
@@ -19,31 +19,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - id: set-env
-        run: |-
-          if [[ "${{ inputs.ENVIRONMENT }}" == "prod" ]]; then
-            echo "DATABASE_URL=${{ secrets.DATABASE_URL_PROD }}" >> "$GITHUB_ENV"
-            echo "DB_USER=${{ secrets.DB_USER_PROD }}" >> "$GITHUB_ENV"
-            echo "DB_PASS=${{ secrets.DB_PASS_PROD }}" >> "$GITHUB_ENV"
-            echo "CUSTOM_DOMAIN=${{ secrets.CUSTOM_DOMAIN_PROD }}" >> "$GITHUB_ENV"
-          elif [[ "${{ inputs.ENVIRONMENT }}" == "dev" ]]; then
-            echo "DATABASE_URL=${{ secrets.DATABASE_URL_DEV }}" >> "$GITHUB_ENV"
-            echo "DB_USER=${{ secrets.DB_USER_DEV }}" >> "$GITHUB_ENV"
-            echo "DB_PASS=${{ secrets.DB_PASS_DEV }}" >> "$GITHUB_ENV"
-          else
-            echo "Invalid ENVIRONMENT: ${{ inputs.ENVIRONMENT }}"
-            exit 1
-          fi
-          
-          echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> "$GITHUB_ENV"
-
       - uses: "actions/checkout@v4"
       - uses: "hashicorp/setup-terraform@v3"
 
       - id: "auth"
         uses: "google-github-actions/auth@v2"
         with:
-          credentials_json: "${{ env.GCP_KEY }}"
+          credentials_json: "${{ secrets.GCP_KEY }}"
           export_environment_variables: true
           create_credentials_file: true
 
@@ -68,9 +50,9 @@ jobs:
         run: |-
           terraform -chdir=terraform/deploy apply \
           -var="git_sha=${{ github.sha }}" \
-          -var="DATABASE_URL=${{env.DATABASE_URL}}" \
-          -var="DB_USER=${{env.DB_USER}}" \
-          -var="DB_PASS=${{env.DB_PASS}}" \
-          -var="CUSTOM_DOMAIN=${{ env.CUSTOM_DOMAIN }}" \
-          -var="JWT_SECRET=${{ env.JWT_SECRET }}" \
+          -var="DATABASE_URL=${{secrets.DATABASE_URL}}" \
+          -var="DB_USER=${{secrets.DB_USER}}" \
+          -var="DB_PASS=${{secrets.DB_PASS}}" \
+          -var="CUSTOM_DOMAIN=${{ secrets.CUSTOM_DOMAIN }}" \
+          -var="JWT_SECRET=${{ secrets.JWT_SECRET }}" \
           -auto-approve
