--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -8,14 +8,12 @@ on:
 jobs:
   prod-build:
     uses: ./.github/workflows/build-workflow.yml
-    secrets:
-      GCP_KEY: ${{ secrets.GCP_KEY_PROD }}
-      GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID_PROD }}
+    with:
+      ENVIRONMENT: prod
 
   prod-deploy:
     needs: prod-build
     uses: ./.github/workflows/deploy-workflow.yml
-    secrets: inherit
     with:
       VERSION: ${{ github.ref_name }}
       ENVIRONMENT: prod
