--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -2,18 +2,16 @@ name: Dev/staging deployment
 
 on:
   push:
-    branches: [master]
+    branches: [ master ]
 
 jobs:
   dev-build:
     uses: ./.github/workflows/build-workflow.yml
-    secrets:
-      GCP_KEY: ${{ secrets.GCP_KEY_DEV }}
-      GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID_DEV }}
+    with:
+      ENVIRONMENT: dev
 
   dev-deploy:
     needs: dev-build
     uses: ./.github/workflows/deploy-workflow.yml
-    secrets: inherit
     with:
       ENVIRONMENT: dev
