added secrets inherit

--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -2,16 +2,18 @@ name: Dev/staging deployment
 
 on:
   push:
-    branches: [master]
+    branches: [ master ]
 
 jobs:
   dev-build:
     uses: ./.github/workflows/build-workflow.yml
+    secrets: inherit
     with:
       ENVIRONMENT: dev
 
   dev-deploy:
     needs: dev-build
     uses: ./.github/workflows/deploy-workflow.yml
+    secrets: inherit
     with:
       ENVIRONMENT: dev
