--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -8,12 +8,14 @@ on:
 jobs:
   prod-build:
     uses: ./.github/workflows/build-workflow.yml
+    secrets: inherit
     with:
       ENVIRONMENT: prod
 
   prod-deploy:
     needs: prod-build
     uses: ./.github/workflows/deploy-workflow.yml
+    secrets: inherit
     with:
       VERSION: ${{ github.ref_name }}
       ENVIRONMENT: prod
