--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        end: [be]
+        end: [be, fe]
 
     steps:
       - uses: "actions/checkout@v4"
